--- a/mercari-price-prediction_with-kaggle-notebook.ipynb
+++ b/mercari-price-prediction_with-kaggle-notebook.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-23T05:27:38.194506Z",
-     "iopub.status.busy": "2024-06-23T05:27:38.193543Z",
-     "iopub.status.idle": "2024-06-23T05:27:38.202727Z",
-     "shell.execute_reply": "2024-06-23T05:27:38.201518Z",
-     "shell.execute_reply.started": "2024-06-23T05:27:38.194464Z"
+     "iopub.execute_input": "2024-06-25T00:14:17.805743Z",
+     "iopub.status.busy": "2024-06-25T00:14:17.805364Z",
+     "iopub.status.idle": "2024-06-25T00:14:20.263121Z",
+     "shell.execute_reply": "2024-06-25T00:14:20.262016Z",
+     "shell.execute_reply.started": "2024-06-25T00:14:17.805713Z"
     }
    },
    "outputs": [],
@@ -28,16 +28,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "_cell_guid": "b1076dfc-b9ad-4769-8c92-a6c4dae69d19",
     "_uuid": "8f2839f25d086af736a60e9eeb907d3b93b6e0e5",
     "execution": {
-     "iopub.execute_input": "2024-06-23T05:28:31.746056Z",
-     "iopub.status.busy": "2024-06-23T05:28:31.744760Z",
-     "iopub.status.idle": "2024-06-23T05:28:43.699506Z",
-     "shell.execute_reply": "2024-06-23T05:28:43.697980Z",
-     "shell.execute_reply.started": "2024-06-23T05:28:31.746009Z"
+     "iopub.execute_input": "2024-06-25T00:14:20.265713Z",
+     "iopub.status.busy": "2024-06-25T00:14:20.265241Z",
+     "iopub.status.idle": "2024-06-25T00:14:31.678514Z",
+     "shell.execute_reply": "2024-06-25T00:14:31.677068Z",
+     "shell.execute_reply.started": "2024-06-25T00:14:20.265681Z"
     }
    },
    "outputs": [
@@ -191,14 +191,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-23T05:28:43.702551Z",
-     "iopub.status.busy": "2024-06-23T05:28:43.702067Z",
-     "iopub.status.idle": "2024-06-23T05:28:48.919497Z",
-     "shell.execute_reply": "2024-06-23T05:28:48.918368Z",
-     "shell.execute_reply.started": "2024-06-23T05:28:43.702504Z"
+     "iopub.execute_input": "2024-06-25T00:14:31.680411Z",
+     "iopub.status.busy": "2024-06-25T00:14:31.679931Z",
+     "iopub.status.idle": "2024-06-25T00:14:36.689250Z",
+     "shell.execute_reply": "2024-06-25T00:14:36.688013Z",
+     "shell.execute_reply.started": "2024-06-25T00:14:31.680378Z"
     }
    },
    "outputs": [
@@ -345,14 +345,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-23T05:28:48.921197Z",
-     "iopub.status.busy": "2024-06-23T05:28:48.920835Z",
-     "iopub.status.idle": "2024-06-23T05:29:06.014720Z",
-     "shell.execute_reply": "2024-06-23T05:29:06.013412Z",
-     "shell.execute_reply.started": "2024-06-23T05:28:48.921165Z"
+     "iopub.execute_input": "2024-06-25T00:14:36.693175Z",
+     "iopub.status.busy": "2024-06-25T00:14:36.692239Z",
+     "iopub.status.idle": "2024-06-25T00:14:49.361775Z",
+     "shell.execute_reply": "2024-06-25T00:14:49.360763Z",
+     "shell.execute_reply.started": "2024-06-25T00:14:36.693142Z"
     }
    },
    "outputs": [
@@ -360,8 +360,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 17.1 s, sys: 0 ns, total: 17.1 s\n",
-      "Wall time: 17.1 s\n"
+      "CPU times: user 12.7 s, sys: 0 ns, total: 12.7 s\n",
+      "Wall time: 12.7 s\n"
      ]
     }
    ],
@@ -392,14 +392,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-23T05:29:06.017441Z",
-     "iopub.status.busy": "2024-06-23T05:29:06.017092Z",
-     "iopub.status.idle": "2024-06-23T05:29:06.056014Z",
-     "shell.execute_reply": "2024-06-23T05:29:06.054802Z",
-     "shell.execute_reply.started": "2024-06-23T05:29:06.017411Z"
+     "iopub.execute_input": "2024-06-25T00:14:49.363296Z",
+     "iopub.status.busy": "2024-06-25T00:14:49.362959Z",
+     "iopub.status.idle": "2024-06-25T00:14:49.401323Z",
+     "shell.execute_reply": "2024-06-25T00:14:49.400066Z",
+     "shell.execute_reply.started": "2024-06-25T00:14:49.363270Z"
     }
    },
    "outputs": [
@@ -407,8 +407,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 35.6 ms, sys: 0 ns, total: 35.6 ms\n",
-      "Wall time: 33.1 ms\n"
+      "CPU times: user 33.6 ms, sys: 1.49 ms, total: 35.1 ms\n",
+      "Wall time: 32.8 ms\n"
      ]
     }
    ],
@@ -420,14 +420,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-23T05:29:06.057739Z",
-     "iopub.status.busy": "2024-06-23T05:29:06.057394Z",
-     "iopub.status.idle": "2024-06-23T05:29:16.316431Z",
-     "shell.execute_reply": "2024-06-23T05:29:16.315137Z",
-     "shell.execute_reply.started": "2024-06-23T05:29:06.057709Z"
+     "iopub.execute_input": "2024-06-25T00:14:49.402990Z",
+     "iopub.status.busy": "2024-06-25T00:14:49.402669Z",
+     "iopub.status.idle": "2024-06-25T00:14:58.611339Z",
+     "shell.execute_reply": "2024-06-25T00:14:58.610171Z",
+     "shell.execute_reply.started": "2024-06-25T00:14:49.402963Z"
     }
    },
    "outputs": [
@@ -435,8 +435,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 9.77 s, sys: 507 ms, total: 10.3 s\n",
-      "Wall time: 10.3 s\n"
+      "CPU times: user 8.73 s, sys: 490 ms, total: 9.22 s\n",
+      "Wall time: 9.2 s\n"
      ]
     }
    ],
@@ -464,14 +464,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-23T05:29:16.318409Z",
-     "iopub.status.busy": "2024-06-23T05:29:16.318013Z",
-     "iopub.status.idle": "2024-06-23T05:31:03.401017Z",
-     "shell.execute_reply": "2024-06-23T05:31:03.399877Z",
-     "shell.execute_reply.started": "2024-06-23T05:29:16.318376Z"
+     "iopub.execute_input": "2024-06-25T00:14:58.612967Z",
+     "iopub.status.busy": "2024-06-25T00:14:58.612646Z",
+     "iopub.status.idle": "2024-06-25T00:16:10.184480Z",
+     "shell.execute_reply": "2024-06-25T00:16:10.183445Z",
+     "shell.execute_reply.started": "2024-06-25T00:14:58.612940Z"
     }
    },
    "outputs": [
@@ -505,8 +505,8 @@
       "137418\n",
       "295525\n",
       "64154\n",
-      "CPU times: user 1min 46s, sys: 526 ms, total: 1min 47s\n",
-      "Wall time: 1min 47s\n"
+      "CPU times: user 1min 11s, sys: 503 ms, total: 1min 11s\n",
+      "Wall time: 1min 11s\n"
      ]
     }
    ],
@@ -566,14 +566,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-23T05:31:03.404500Z",
-     "iopub.status.busy": "2024-06-23T05:31:03.404037Z",
-     "iopub.status.idle": "2024-06-23T05:31:05.066265Z",
-     "shell.execute_reply": "2024-06-23T05:31:05.065185Z",
-     "shell.execute_reply.started": "2024-06-23T05:31:03.404459Z"
+     "iopub.execute_input": "2024-06-25T00:16:10.186117Z",
+     "iopub.status.busy": "2024-06-25T00:16:10.185784Z",
+     "iopub.status.idle": "2024-06-25T00:16:11.742971Z",
+     "shell.execute_reply": "2024-06-25T00:16:11.742048Z",
+     "shell.execute_reply.started": "2024-06-25T00:16:10.186091Z"
     }
    },
    "outputs": [
@@ -584,8 +584,8 @@
       "Training : 1467709 examples\n",
       "Validating : 14826 examples\n",
       "Testing : 693359 examples\n",
-      "CPU times: user 1.59 s, sys: 64.1 ms, total: 1.66 s\n",
-      "Wall time: 1.65 s\n"
+      "CPU times: user 1.5 s, sys: 54 ms, total: 1.55 s\n",
+      "Wall time: 1.55 s\n"
      ]
     },
     {
@@ -594,7 +594,7 @@
        "0"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -620,14 +620,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-23T05:31:05.067894Z",
-     "iopub.status.busy": "2024-06-23T05:31:05.067554Z",
-     "iopub.status.idle": "2024-06-23T05:31:12.418759Z",
-     "shell.execute_reply": "2024-06-23T05:31:12.417582Z",
-     "shell.execute_reply.started": "2024-06-23T05:31:05.067865Z"
+     "iopub.execute_input": "2024-06-25T00:16:11.744437Z",
+     "iopub.status.busy": "2024-06-25T00:16:11.744150Z",
+     "iopub.status.idle": "2024-06-25T00:16:16.933390Z",
+     "shell.execute_reply": "2024-06-25T00:16:16.932171Z",
+     "shell.execute_reply.started": "2024-06-25T00:16:11.744414Z"
     }
    },
    "outputs": [
@@ -636,8 +636,8 @@
      "output_type": "stream",
      "text": [
       "Handling missing values...\n",
-      "CPU times: user 6.78 s, sys: 564 ms, total: 7.34 s\n",
-      "Wall time: 7.34 s\n"
+      "CPU times: user 4.62 s, sys: 564 ms, total: 5.18 s\n",
+      "Wall time: 5.18 s\n"
      ]
     }
    ],
@@ -669,14 +669,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-23T05:31:12.420844Z",
-     "iopub.status.busy": "2024-06-23T05:31:12.420496Z",
-     "iopub.status.idle": "2024-06-23T05:40:48.616855Z",
-     "shell.execute_reply": "2024-06-23T05:40:48.615656Z",
-     "shell.execute_reply.started": "2024-06-23T05:31:12.420814Z"
+     "iopub.execute_input": "2024-06-25T00:16:16.936599Z",
+     "iopub.status.busy": "2024-06-25T00:16:16.936252Z",
+     "iopub.status.idle": "2024-06-25T00:23:45.846980Z",
+     "shell.execute_reply": "2024-06-25T00:23:45.845610Z",
+     "shell.execute_reply.started": "2024-06-25T00:16:16.936570Z"
     }
    },
    "outputs": [
@@ -685,14 +685,14 @@
      "output_type": "stream",
      "text": [
       "Vectorizing data...\n",
-      "X: (2175894, 175913)\n",
-      "X_train: (1467709, 175913)\n",
-      "X_dev: (14826, 175913)\n",
-      "X_test: (693359, 175913)\n",
+      "X: (2175894, 183913)\n",
+      "X_train: (1467709, 183913)\n",
+      "X_dev: (14826, 183913)\n",
+      "X_test: (693359, 183913)\n",
       "Y_train: (1467709, 1)\n",
       "Y_dev: (14826, 1)\n",
-      "CPU times: user 9min 23s, sys: 13.1 s, total: 9min 36s\n",
-      "Wall time: 9min 36s\n"
+      "CPU times: user 7min 17s, sys: 12.3 s, total: 7min 29s\n",
+      "Wall time: 7min 28s\n"
      ]
     }
    ],
@@ -722,7 +722,7 @@
     "        # bag-of-wordで分割する単位をn-gramで連続する単語のつながりとする\n",
     "        # 商品名は2-gram(2つの単語のつながり)で分割\n",
     "        ngram_range=(1, 2),\n",
-    "        max_features=1000, # トークンカウントの上限値############### 50000\n",
+    "        max_features=5000, # トークンカウントの上限値############### 50000\n",
     "        # トークンカウントステップをオーバーライド\n",
     "        preprocessor=build_preprocessor('name'))),\n",
     "    ('subcat_0', CountVectorizer(\n",
@@ -754,7 +754,7 @@
     "        # bag-of-wordで分割する単位をn-gramで連続する単語のつながりとする\n",
     "        # 商品説名は3-gram(3つの単語のつながり)で分割\n",
     "        ngram_range=(1, 3),\n",
-    "        max_features=1000, # トークンカウントの上限値#################### 100000\n",
+    "        max_features=5000, # トークンカウントの上限値#################### 100000\n",
     "        preprocessor=build_preprocessor('item_description'))),\n",
     "])\n",
     "\n",
@@ -790,14 +790,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-23T05:44:17.206431Z",
-     "iopub.status.busy": "2024-06-23T05:44:17.205951Z",
-     "iopub.status.idle": "2024-06-23T05:50:46.416143Z",
-     "shell.execute_reply": "2024-06-23T05:50:46.414852Z",
-     "shell.execute_reply.started": "2024-06-23T05:44:17.206367Z"
+     "iopub.execute_input": "2024-06-25T00:23:45.848916Z",
+     "iopub.status.busy": "2024-06-25T00:23:45.848493Z",
+     "iopub.status.idle": "2024-06-25T00:30:58.894430Z",
+     "shell.execute_reply": "2024-06-25T00:30:58.891654Z",
+     "shell.execute_reply.started": "2024-06-25T00:23:45.848880Z"
     }
    },
    "outputs": [
@@ -807,8 +807,8 @@
      "text": [
       "Fitting Ridge model on training examples...\n",
       "Fitting RidgeCV model on training examples...\n",
-      "CPU times: user 12min 8s, sys: 9min 48s, total: 21min 56s\n",
-      "Wall time: 6min 29s\n"
+      "CPU times: user 13min 17s, sys: 9min 58s, total: 23min 16s\n",
+      "Wall time: 7min 13s\n"
      ]
     },
     {
@@ -820,7 +820,7 @@
        "RidgeCV(alphas=[5.0], cv=2, scoring='neg_mean_squared_error')"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -853,14 +853,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 12,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-23T05:51:44.568071Z",
-     "iopub.status.busy": "2024-06-23T05:51:44.567001Z",
-     "iopub.status.idle": "2024-06-23T05:51:44.577361Z",
-     "shell.execute_reply": "2024-06-23T05:51:44.576167Z",
-     "shell.execute_reply.started": "2024-06-23T05:51:44.568030Z"
+     "iopub.execute_input": "2024-06-25T00:30:58.896899Z",
+     "iopub.status.busy": "2024-06-25T00:30:58.896403Z",
+     "iopub.status.idle": "2024-06-25T00:30:58.909275Z",
+     "shell.execute_reply": "2024-06-25T00:30:58.907957Z",
+     "shell.execute_reply.started": "2024-06-25T00:30:58.896860Z"
     }
    },
    "outputs": [
@@ -868,7 +868,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Ridge model RMSL error: 0.017227598532414803\n"
+      "Ridge model RMSL error: 0.015345187092440295\n"
      ]
     }
    ],
@@ -880,14 +880,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-23T05:50:46.439011Z",
-     "iopub.status.busy": "2024-06-23T05:50:46.438135Z",
-     "iopub.status.idle": "2024-06-23T05:50:46.458827Z",
-     "shell.execute_reply": "2024-06-23T05:50:46.456786Z",
-     "shell.execute_reply.started": "2024-06-23T05:50:46.438954Z"
+     "iopub.execute_input": "2024-06-25T00:30:58.911890Z",
+     "iopub.status.busy": "2024-06-25T00:30:58.911301Z",
+     "iopub.status.idle": "2024-06-25T00:30:58.929661Z",
+     "shell.execute_reply": "2024-06-25T00:30:58.928337Z",
+     "shell.execute_reply.started": "2024-06-25T00:30:58.911852Z"
     }
    },
    "outputs": [
@@ -895,7 +895,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "RidgeCV model RMSL error: 0.01705041819933213\n"
+      "RidgeCV model RMSL error: 0.015183877193463313\n"
      ]
     }
    ],
@@ -910,19 +910,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "値が異常に低いので、RMSE関数を自作して計算してみる"
+    "値が異常に低いので、自作関数を用いて計算してみる"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 14,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-23T05:52:13.883348Z",
-     "iopub.status.busy": "2024-06-23T05:52:13.882923Z",
-     "iopub.status.idle": "2024-06-23T05:52:13.889937Z",
-     "shell.execute_reply": "2024-06-23T05:52:13.888750Z",
-     "shell.execute_reply.started": "2024-06-23T05:52:13.883299Z"
+     "iopub.execute_input": "2024-06-25T00:30:58.932016Z",
+     "iopub.status.busy": "2024-06-25T00:30:58.931391Z",
+     "iopub.status.idle": "2024-06-25T00:30:58.939270Z",
+     "shell.execute_reply": "2024-06-25T00:30:58.938042Z",
+     "shell.execute_reply.started": "2024-06-25T00:30:58.931963Z"
     }
    },
    "outputs": [],
@@ -936,14 +936,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 15,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-23T05:52:32.823224Z",
-     "iopub.status.busy": "2024-06-23T05:52:32.822457Z",
-     "iopub.status.idle": "2024-06-23T05:52:32.831261Z",
-     "shell.execute_reply": "2024-06-23T05:52:32.830149Z",
-     "shell.execute_reply.started": "2024-06-23T05:52:32.823190Z"
+     "iopub.execute_input": "2024-06-25T00:30:58.941736Z",
+     "iopub.status.busy": "2024-06-25T00:30:58.941152Z",
+     "iopub.status.idle": "2024-06-25T00:30:58.956167Z",
+     "shell.execute_reply": "2024-06-25T00:30:58.954524Z",
+     "shell.execute_reply.started": "2024-06-25T00:30:58.941698Z"
     }
    },
    "outputs": [
@@ -951,7 +951,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Ridge model RMSL error: 0.5157330525857923\n"
+      "Ridge model RMSL error: 0.48396093503959875\n"
      ]
     }
    ],
@@ -963,14 +963,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 16,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-23T05:52:58.272304Z",
-     "iopub.status.busy": "2024-06-23T05:52:58.271911Z",
-     "iopub.status.idle": "2024-06-23T05:52:58.280667Z",
-     "shell.execute_reply": "2024-06-23T05:52:58.279464Z",
-     "shell.execute_reply.started": "2024-06-23T05:52:58.272273Z"
+     "iopub.execute_input": "2024-06-25T00:30:58.958568Z",
+     "iopub.status.busy": "2024-06-25T00:30:58.957948Z",
+     "iopub.status.idle": "2024-06-25T00:30:58.971582Z",
+     "shell.execute_reply": "2024-06-25T00:30:58.970331Z",
+     "shell.execute_reply.started": "2024-06-25T00:30:58.958529Z"
     }
    },
    "outputs": [
@@ -978,7 +978,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "RidgeCV model RMSL error: 0.5125338609304031\n"
+      "RidgeCV model RMSL error: 0.4810661051625231\n"
      ]
     }
    ],
