前処理(1回目終了)

--- a/test2_0.555_with_book.ipynb
+++ b/test2_0.555_with_book.ipynb
@@ -391,7 +391,7 @@
     }
    ],
    "source": [
-    "train.describe(include='all').transpose()\n"
+    "train.describe(include='all').transpose()"
    ]
   },
   {
