Add the source of the parameters in the final model

--- a/lgb-ridge-ens-final.ipynb
+++ b/lgb-ridge-ens-final.ipynb
@@ -922,7 +922,7 @@
     "    return brand\n",
     "\n",
     "# ブランド名の付替えを実施\n",
-    "train_test_combine['brand_name'] = train_test_combine[['brand_name','name']].apply(brandfinder, axis = 1) # axis=1で行方向\n",
+    "train_test_combine['brand_name'] = train_test_combine[['brand_name','name']].apply(brandfinder, axis = 1) # axis=1 で行方向\n",
     "\n",
     "# brandfinderの中身\n",
     "train_test_combine[['brand_name','name']].head(10)"
@@ -1475,6 +1475,7 @@
    "outputs": [],
    "source": [
     "# ハイパーパラメータの設定\n",
+    "# from lgb-ridge-ens-v3-round175.ipynb\n",
     "params = {\n",
     "    'objective': 'regression',\n",
     "    'metric': 'rmse',\n",
@@ -1710,7 +1711,7 @@
    ],
    "source": [
     "%%time\n",
-    "# ログレベルをWARNINGに設定\n",
+    "# ログレベルを WARNING に設定\n",
     "optuna.logging.set_verbosity(optuna.logging.WARNING)\n",
     "\n",
     "# Optuna による最適化\n",
@@ -2210,8 +2211,7 @@
    },
    "outputs": [],
    "source": [
-    "# 最適な重みを使用して予測を行う\n",
-    "w1, w2 = (0.2, 0.8)\n",
+    "w1, w2 = (0.2, 0.8) # from lgb-ridge-ens-v3-round175.ipynb\n",
     "y_train_pred = w1 * gbm.predict(X_train) + w2 * ridge.predict(X_train)"
    ]
   },
@@ -2262,8 +2262,7 @@
    },
    "outputs": [],
    "source": [
-    "# 最適な重みを使用して予測を行う\n",
-    "w1, w2 = (0.2, 0.8)\n",
+    "w1, w2 = (0.2, 0.8) # from lgb-ridge-ens-v3-round175.ipynb\n",
     "y_test_pred = w1*gbm.predict(X_test) + w2*ridge.predict(X_test)"
    ]
   },
